Added unbaked model for connected textures